# repo

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  README.md  biome.jsonc  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.claude/: settings.json
.github/workflows/: quality.yml
apps/cli-app/: Cargo.toml
apps/cli-app/src/: main.rs
apps/family-app/: .gitignore  drizzle.config.ts  middleware.ts  next.config.ts  package.json  tsconfig.json  turbo.json
apps/family-app/app/: actions.js  actions.ts  layout.js  layout.tsx  manifest.js  manifest.ts  page.js  page.tsx
apps/family-app/components/: chat.js  (+9 more)
apps/portfolio/: README.md  dictionary.txt  next.config.mjs  next.config.ts  package.json  postcss.config.cjs  source.config.ts  tsconfig.json
apps/video-studio/: .gitignore  README.md  copy.ts  package.json  remotion.config.ts  studio.ts  transcribe-two-eight.ts  tsconfig.json
apps/voice-enhancer/: FUTURE.md  README.md  pyproject.toml
apps/voice-enhancer/src/voice_enhancer/: __init__.py  __main__.py  cli.py  pipeline.py
apps/voice-enhancer/src/voice_enhancer/stages/: __init__.py  cleanup.py  denoiser.py  dsp.py  loader.py  normalizer.py  separator.py
apps/voice-enhancer/src/voice_enhancer/utils/: __init__.py  audio.py
tooling/next-config/: README.md  next.config.js  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
tooling/tailwind-config/: package.json  postcss.config.js  tsconfig.json  tsconfig.tsbuildinfo
tooling/typescript-config/: base.json  nextjs.json  package.json  react-library.json
(+163 files in other folders)
