[project]
name = "voice-enhancer"
version = "0.1.0"
description = "Transform noisy audio recordings into professional 'recording booth' quality voice audio"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0,<2.5.0",
    "torchaudio>=2.0.0,<2.4.0",
    "demucs>=4.0.0",
    "noisereduce>=3.0.0",
    "soundfile>=0.12.0",
    "pydub>=0.25.0",
    "pyloudnorm>=0.1.1",
    "scipy>=1.10.0",
    "numpy>=1.24.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "librosa>=0.10.0",
    "deepfilternet>=0.5.0",
]

[project.scripts]
voice-enhancer = "voice_enhancer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_enhancer"]
